Actualización de archivos 21/8 16:10

--- a/EDA_Hospital.ipynb
+++ b/EDA_Hospital.ipynb
@@ -1,13 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA_Hospital"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -19,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,10 +39,8 @@
     }
    ],
    "source": [
-    "# Importamos el excel como un DataFrame\n",
-    "Hospital = pd.read_excel(r'BBDD_Hospitalización.xlsx')\n",
-    "# Creamos copia para modificar y tener un respaldo original de comparación\n",
-    "HospitalOk = Hospital.copy()"
+    "Hospital = pd.read_excel(r'Hospital_BBDD.xlsx')\n",
+    "HospitalOk = Hospital.copy() # Creamos copia para tener un respaldo original de comparación"
    ]
   },
   {
@@ -47,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,17 +80,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análisis y visualización estadística de cada columna.\n",
-    "Tenemos 568 registros válidos. Si el count es menor a 568 es porque hay valores NaN.\n",
-    "Estos valores se mantienen, ya que no afectan las métricas, y son una mínima proporción.\n",
+    "# Visualización estadística y correción de cada columna.\n",
+    "Detectamos 568 registros válidos.\n",
+    "Las columnas cuyo count es menor a 568 se debe a valores nulos. Por el momento se mantienen como nulos\n",
     "\n",
-    "A continuación corroboramos que los valores únicos correspondan a categorías realmente distintas\n",
+    "A continuación, corroboramos que los valores únicos correspondan a categorías realmente distintas\n",
     "y no sean errores de tipeo. En caso de encontar errores de tipeo serán corregidos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -415,13 +420,12 @@
     "print(HospitalOk['EPOC'].value_counts())\n",
     "print(HospitalOk['EPOC'].count())\n",
     "print(HospitalOk['EPOC'].describe())\n",
-    "\n",
-    "# Las categorías se agruparán en SI/NO"
+    "# Luego del análisis, se decide que la columna SERÁ reagrupada en SI/NO (binaria)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -460,19 +464,18 @@
     "print(HospitalOk['BIOPSIA'].value_counts())\n",
     "print(HospitalOk['BIOPSIA'].count())\n",
     "print(HospitalOk['BIOPSIA'].describe())\n",
-    "# Las categorías podrían agruparse en SI/NO"
+    "# Luego del análisis, se decide que la columna PODRÍA SER reagrupada en SI/NO (binaria)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Detectado Error de Tipeo de 'ADENOCARCINOMA GLEASON 6' y 'ADENOCARCINOMA GLEASON 7' (se corrige)\n",
     "HospitalOk.loc[HospitalOk['BIOPSIA'] == 'ADENOCARCINOMA GLEASON 6 ', 'BIOPSIA'] = 'ADENOCARCINOMA GLEASON 6'\n",
     "HospitalOk.loc[HospitalOk['BIOPSIA'] == 'ADENOCARCINOMA GLEASON 7 ', 'BIOPSIA'] = 'ADENOCARCINOMA GLEASON 7'\n",
-    "\n",
     "# Se normalizan todos los valores, quitando espacio al final de la cadena\n",
     "HospitalOk.loc[HospitalOk['BIOPSIA'] == 'ADENOCARCINOMA GLEASON 10 ', 'BIOPSIA'] = 'ADENOCARCINOMA GLEASON 10'\n",
     "HospitalOk.loc[HospitalOk['BIOPSIA'] == 'ADENOCARCINOMA GLEASON 9 ', 'BIOPSIA'] = 'ADENOCARCINOMA GLEASON 9'\n",
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -511,12 +514,12 @@
     "print(HospitalOk['COMPLICACION POST BIOPSIA'].value_counts())\n",
     "print(HospitalOk['COMPLICACION POST BIOPSIA'].count())\n",
     "print(HospitalOk['COMPLICACION POST BIOPSIA'].describe())\n",
-    "# Las categorías se agruparán en SI/NO"
+    "# Luego del análisis, se decide que la columna SERÁ reagrupada en SI/NO (binaria)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -604,13 +607,12 @@
     "print(HospitalOk['TIPO DE CULTIVO'].value_counts())\n",
     "print(HospitalOk['TIPO DE CULTIVO'].count())\n",
     "print(HospitalOk['TIPO DE CULTIVO'].describe())\n",
-    "\n",
-    "# Las categorías podrían agruparse en SI/NO"
+    "# Luego del análisis, se decide que la columna SERÁ reagrupada en SI/NO (binaria)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -637,13 +639,12 @@
     "print(HospitalOk['AGENTE AISLADO'].value_counts())\n",
     "print(HospitalOk['AGENTE AISLADO'].count())\n",
     "print(HospitalOk['AGENTE AISLADO'].describe())\n",
-    "\n",
-    "# Las categorías podrían agruparse en SI/NO"
+    "# Luego del análisis, se decide que la columna PODRÍA SER reagrupada en SI/NO (binaria)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -675,13 +676,12 @@
     "print(HospitalOk['PATRON DE RESISTENCIA'].value_counts())\n",
     "print(HospitalOk['PATRON DE RESISTENCIA'].count())\n",
     "print(HospitalOk['PATRON DE RESISTENCIA'].describe())\n",
-    "\n",
-    "# Las categorías podrían agruparse en SI/NO"
+    "# Luego del análisis, se decide que la columna PODRÍA SER reagrupada en SI/NO (binaria)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -745,13 +745,12 @@
     "print(HospitalOk['DIAS HOSPITALIZACION MQ'].value_counts())\n",
     "print(HospitalOk['DIAS HOSPITALIZACION MQ'].count())\n",
     "print(HospitalOk['DIAS HOSPITALIZACION MQ'].describe())\n",
-    "\n",
-    "# Esta columna será eliminada"
+    "# Esta columna será eliminada por no aportar información valiosa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -782,8 +781,7 @@
     "print(HospitalOk['DIAS HOSPITALIZACION UPC'].value_counts())\n",
     "print(HospitalOk['DIAS HOSPITALIZACION UPC'].count())\n",
     "print(HospitalOk['DIAS HOSPITALIZACION UPC'].describe())\n",
-    "\n",
-    "# Esta columna será eliminada"
+    "# Esta columna será eliminada por no aportar información valiosa"
    ]
   },
   {
@@ -795,11 +793,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HospitalOk.to_excel(r'HospitalOk.xlsx', index=False)"
+    "HospitalOk.to_excel(r'Hospital_EDA.xlsx', index=False)"
    ]
   }
  ],
